add some variable for product
